parser/parser.output
Grammar

    0 $accept: program $end

    1 program: BEGIN_KEYWORD block END_KEYWORD

    2 block: declaration_list statement_list

    3 declaration_list: declaration declaration_list
    4                 | %empty

    5 declaration: type id_list SEMICOLON

    6 type: STRING_KEYWORD
    7     | INT_KEYWORD
    8     | FLOAT_KEYWORD
    9     | CHAR_KEYWORD

   10 id_list: IDENTIFIER
   11        | IDENTIFIER COMMA id_list

   12 statement_list: statement statement_list
   13               | %empty

   14 statement: input_statement
   15          | print_statement
   16          | assignment_statement
   17          | if_else_statement

   18 input_statement: INPUT_KEYWORD LPAREN IDENTIFIER RPAREN SEMICOLON

   19 print_statement: PRINT_KEYWORD LPAREN IDENTIFIER RPAREN SEMICOLON

   20 assignment_statement: IDENTIFIER ASSIGN expression SEMICOLON

   21 expression: term
   22           | expression ARITH_OP term

   23 term: IDENTIFIER
   24     | INTEGER
   25     | FLOAT_LITERAL
   26     | CHAR_LITERAL
   27     | LPAREN expression RPAREN

   28 if_else_statement: IF_KEYWORD LPAREN condition RPAREN statement else_part

   29 else_part: ELSE_KEYWORD statement
   30          | %empty

   31 condition: expression RELOP expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BEGIN_KEYWORD (258) 1
    END_KEYWORD (259) 1
    STRING_KEYWORD (260) 6
    INT_KEYWORD (261) 7
    FLOAT_KEYWORD (262) 8
    CHAR_KEYWORD (263) 9
    INPUT_KEYWORD (264) 18
    IF_KEYWORD (265) 28
    ELSE_KEYWORD (266) 29
    PRINT_KEYWORD (267) 19
    IDENTIFIER (268) 10 11 18 19 20 23
    INTEGER (269) 24
    FLOAT_LITERAL (270) 25
    CHAR_LITERAL (271) 26
    SEMICOLON (272) 5 18 19 20
    COMMA (273) 11
    LPAREN (274) 18 19 27 28
    RPAREN (275) 18 19 27 28
    ASSIGN (276) 20
    ARITH_OP (277) 22
    RELOP (278) 31
    LOWER_THAN_ELSE (279)


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program (26)
        on left: 1
        on right: 0
    block (27)
        on left: 2
        on right: 1
    declaration_list (28)
        on left: 3 4
        on right: 2 3
    declaration (29)
        on left: 5
        on right: 3
    type (30)
        on left: 6 7 8 9
        on right: 5
    id_list (31)
        on left: 10 11
        on right: 5 11
    statement_list (32)
        on left: 12 13
        on right: 2 12
    statement (33)
        on left: 14 15 16 17
        on right: 12 28 29
    input_statement (34)
        on left: 18
        on right: 14
    print_statement (35)
        on left: 19
        on right: 15
    assignment_statement (36)
        on left: 20
        on right: 16
    expression (37)
        on left: 21 22
        on right: 20 22 27 31
    term (38)
        on left: 23 24 25 26 27
        on right: 21 22
    if_else_statement (39)
        on left: 28
        on right: 17
    else_part (40)
        on left: 29 30
        on right: 28
    condition (41)
        on left: 31
        on right: 28


State 0

    0 $accept: . program $end

    BEGIN_KEYWORD  shift, and go to state 1

    program  go to state 2


State 1

    1 program: BEGIN_KEYWORD . block END_KEYWORD

    STRING_KEYWORD  shift, and go to state 3
    INT_KEYWORD     shift, and go to state 4
    FLOAT_KEYWORD   shift, and go to state 5
    CHAR_KEYWORD    shift, and go to state 6

    $default  reduce using rule 4 (declaration_list)

    block             go to state 7
    declaration_list  go to state 8
    declaration       go to state 9
    type              go to state 10


State 2

    0 $accept: program . $end

    $end  shift, and go to state 11


State 3

    6 type: STRING_KEYWORD .

    $default  reduce using rule 6 (type)


State 4

    7 type: INT_KEYWORD .

    $default  reduce using rule 7 (type)


State 5

    8 type: FLOAT_KEYWORD .

    $default  reduce using rule 8 (type)


State 6

    9 type: CHAR_KEYWORD .

    $default  reduce using rule 9 (type)


State 7

    1 program: BEGIN_KEYWORD block . END_KEYWORD

    END_KEYWORD  shift, and go to state 12


State 8

    2 block: declaration_list . statement_list

    INPUT_KEYWORD  shift, and go to state 13
    IF_KEYWORD     shift, and go to state 14
    PRINT_KEYWORD  shift, and go to state 15
    IDENTIFIER     shift, and go to state 16

    $default  reduce using rule 13 (statement_list)

    statement_list        go to state 17
    statement             go to state 18
    input_statement       go to state 19
    print_statement       go to state 20
    assignment_statement  go to state 21
    if_else_statement     go to state 22


State 9

    3 declaration_list: declaration . declaration_list

    STRING_KEYWORD  shift, and go to state 3
    INT_KEYWORD     shift, and go to state 4
    FLOAT_KEYWORD   shift, and go to state 5
    CHAR_KEYWORD    shift, and go to state 6

    $default  reduce using rule 4 (declaration_list)

    declaration_list  go to state 23
    declaration       go to state 9
    type              go to state 10


State 10

    5 declaration: type . id_list SEMICOLON

    IDENTIFIER  shift, and go to state 24

    id_list  go to state 25


State 11

    0 $accept: program $end .

    $default  accept


State 12

    1 program: BEGIN_KEYWORD block END_KEYWORD .

    $default  reduce using rule 1 (program)


State 13

   18 input_statement: INPUT_KEYWORD . LPAREN IDENTIFIER RPAREN SEMICOLON

    LPAREN  shift, and go to state 26


State 14

   28 if_else_statement: IF_KEYWORD . LPAREN condition RPAREN statement else_part

    LPAREN  shift, and go to state 27


State 15

   19 print_statement: PRINT_KEYWORD . LPAREN IDENTIFIER RPAREN SEMICOLON

    LPAREN  shift, and go to state 28


State 16

   20 assignment_statement: IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 29


State 17

    2 block: declaration_list statement_list .

    $default  reduce using rule 2 (block)


State 18

   12 statement_list: statement . statement_list

    INPUT_KEYWORD  shift, and go to state 13
    IF_KEYWORD     shift, and go to state 14
    PRINT_KEYWORD  shift, and go to state 15
    IDENTIFIER     shift, and go to state 16

    $default  reduce using rule 13 (statement_list)

    statement_list        go to state 30
    statement             go to state 18
    input_statement       go to state 19
    print_statement       go to state 20
    assignment_statement  go to state 21
    if_else_statement     go to state 22


State 19

   14 statement: input_statement .

    $default  reduce using rule 14 (statement)


State 20

   15 statement: print_statement .

    $default  reduce using rule 15 (statement)


State 21

   16 statement: assignment_statement .

    $default  reduce using rule 16 (statement)


State 22

   17 statement: if_else_statement .

    $default  reduce using rule 17 (statement)


State 23

    3 declaration_list: declaration declaration_list .

    $default  reduce using rule 3 (declaration_list)


State 24

   10 id_list: IDENTIFIER .
   11        | IDENTIFIER . COMMA id_list

    COMMA  shift, and go to state 31

    $default  reduce using rule 10 (id_list)


State 25

    5 declaration: type id_list . SEMICOLON

    SEMICOLON  shift, and go to state 32


State 26

   18 input_statement: INPUT_KEYWORD LPAREN . IDENTIFIER RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 33


State 27

   28 if_else_statement: IF_KEYWORD LPAREN . condition RPAREN statement else_part

    IDENTIFIER     shift, and go to state 34
    INTEGER        shift, and go to state 35
    FLOAT_LITERAL  shift, and go to state 36
    CHAR_LITERAL   shift, and go to state 37
    LPAREN         shift, and go to state 38

    expression  go to state 39
    term        go to state 40
    condition   go to state 41


State 28

   19 print_statement: PRINT_KEYWORD LPAREN . IDENTIFIER RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 42


State 29

   20 assignment_statement: IDENTIFIER ASSIGN . expression SEMICOLON

    IDENTIFIER     shift, and go to state 34
    INTEGER        shift, and go to state 35
    FLOAT_LITERAL  shift, and go to state 36
    CHAR_LITERAL   shift, and go to state 37
    LPAREN         shift, and go to state 38

    expression  go to state 43
    term        go to state 40


State 30

   12 statement_list: statement statement_list .

    $default  reduce using rule 12 (statement_list)


State 31

   11 id_list: IDENTIFIER COMMA . id_list

    IDENTIFIER  shift, and go to state 24

    id_list  go to state 44


State 32

    5 declaration: type id_list SEMICOLON .

    $default  reduce using rule 5 (declaration)


State 33

   18 input_statement: INPUT_KEYWORD LPAREN IDENTIFIER . RPAREN SEMICOLON

    RPAREN  shift, and go to state 45


State 34

   23 term: IDENTIFIER .

    $default  reduce using rule 23 (term)


State 35

   24 term: INTEGER .

    $default  reduce using rule 24 (term)


State 36

   25 term: FLOAT_LITERAL .

    $default  reduce using rule 25 (term)


State 37

   26 term: CHAR_LITERAL .

    $default  reduce using rule 26 (term)


State 38

   27 term: LPAREN . expression RPAREN

    IDENTIFIER     shift, and go to state 34
    INTEGER        shift, and go to state 35
    FLOAT_LITERAL  shift, and go to state 36
    CHAR_LITERAL   shift, and go to state 37
    LPAREN         shift, and go to state 38

    expression  go to state 46
    term        go to state 40


State 39

   22 expression: expression . ARITH_OP term
   31 condition: expression . RELOP expression

    ARITH_OP  shift, and go to state 47
    RELOP     shift, and go to state 48


State 40

   21 expression: term .

    $default  reduce using rule 21 (expression)


State 41

   28 if_else_statement: IF_KEYWORD LPAREN condition . RPAREN statement else_part

    RPAREN  shift, and go to state 49


State 42

   19 print_statement: PRINT_KEYWORD LPAREN IDENTIFIER . RPAREN SEMICOLON

    RPAREN  shift, and go to state 50


State 43

   20 assignment_statement: IDENTIFIER ASSIGN expression . SEMICOLON
   22 expression: expression . ARITH_OP term

    SEMICOLON  shift, and go to state 51
    ARITH_OP   shift, and go to state 47


State 44

   11 id_list: IDENTIFIER COMMA id_list .

    $default  reduce using rule 11 (id_list)


State 45

   18 input_statement: INPUT_KEYWORD LPAREN IDENTIFIER RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 46

   22 expression: expression . ARITH_OP term
   27 term: LPAREN expression . RPAREN

    RPAREN    shift, and go to state 53
    ARITH_OP  shift, and go to state 47


State 47

   22 expression: expression ARITH_OP . term

    IDENTIFIER     shift, and go to state 34
    INTEGER        shift, and go to state 35
    FLOAT_LITERAL  shift, and go to state 36
    CHAR_LITERAL   shift, and go to state 37
    LPAREN         shift, and go to state 38

    term  go to state 54


State 48

   31 condition: expression RELOP . expression

    IDENTIFIER     shift, and go to state 34
    INTEGER        shift, and go to state 35
    FLOAT_LITERAL  shift, and go to state 36
    CHAR_LITERAL   shift, and go to state 37
    LPAREN         shift, and go to state 38

    expression  go to state 55
    term        go to state 40


State 49

   28 if_else_statement: IF_KEYWORD LPAREN condition RPAREN . statement else_part

    INPUT_KEYWORD  shift, and go to state 13
    IF_KEYWORD     shift, and go to state 14
    PRINT_KEYWORD  shift, and go to state 15
    IDENTIFIER     shift, and go to state 16

    statement             go to state 56
    input_statement       go to state 19
    print_statement       go to state 20
    assignment_statement  go to state 21
    if_else_statement     go to state 22


State 50

   19 print_statement: PRINT_KEYWORD LPAREN IDENTIFIER RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 51

   20 assignment_statement: IDENTIFIER ASSIGN expression SEMICOLON .

    $default  reduce using rule 20 (assignment_statement)


State 52

   18 input_statement: INPUT_KEYWORD LPAREN IDENTIFIER RPAREN SEMICOLON .

    $default  reduce using rule 18 (input_statement)


State 53

   27 term: LPAREN expression RPAREN .

    $default  reduce using rule 27 (term)


State 54

   22 expression: expression ARITH_OP term .

    $default  reduce using rule 22 (expression)


State 55

   22 expression: expression . ARITH_OP term
   31 condition: expression RELOP expression .

    ARITH_OP  shift, and go to state 47

    $default  reduce using rule 31 (condition)


State 56

   28 if_else_statement: IF_KEYWORD LPAREN condition RPAREN statement . else_part

    ELSE_KEYWORD  shift, and go to state 58

    $default  reduce using rule 30 (else_part)

    else_part  go to state 59


State 57

   19 print_statement: PRINT_KEYWORD LPAREN IDENTIFIER RPAREN SEMICOLON .

    $default  reduce using rule 19 (print_statement)


State 58

   29 else_part: ELSE_KEYWORD . statement

    INPUT_KEYWORD  shift, and go to state 13
    IF_KEYWORD     shift, and go to state 14
    PRINT_KEYWORD  shift, and go to state 15
    IDENTIFIER     shift, and go to state 16

    statement             go to state 60
    input_statement       go to state 19
    print_statement       go to state 20
    assignment_statement  go to state 21
    if_else_statement     go to state 22


State 59

   28 if_else_statement: IF_KEYWORD LPAREN condition RPAREN statement else_part .

    $default  reduce using rule 28 (if_else_statement)


State 60

   29 else_part: ELSE_KEYWORD statement .

    $default  reduce using rule 29 (else_part)
